# gb_oop

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  Endll.h  Fraction.cpp  Fraction.h  Fruits.h  Pair.cpp  Pair.h  Pair.tpp  Person.cpp  Person.h  Power.cpp  Power.h  README.md  RGBA.cpp  RGBA.h  ReadInteger.h  Stack.cpp  Stack.h  Student.cpp  Student.h  Vector.cpp  Vector.h  lesson1_task.txt  lesson2_task.txt  main.cpp
cars/: Bus.cpp  Bus.h  Car.cpp  Car.h  Minivan.cpp  Minivan.h  PassengerCar.cpp  PassengerCar.h
figures/: Circle.cpp  Circle.h  Figure.h  Parallelogram.cpp  Parallelogram.h  Rectangle.h  Rhombus.h  Square.h
